@@ -86,8 +86,10 @@ Returns a system font.
 \twocolitem{{\bf wxSYS\_ANSI\_VAR\_FONT}}{Windows variable-pitch (proportional) font.}
 \twocolitem{{\bf wxSYS\_SYSTEM\_FONT}}{System font.}
 \twocolitem{{\bf wxSYS\_DEVICE\_DEFAULT\_FONT}}{Device-dependent font (Windows NT only).}
-\twocolitem{{\bf wxSYS\_DEFAULT\_GUI\_FONT}}{Default font for user interface objects such as menus and dialog boxes.
-Not available in versions of Windows earlier than Windows 95 or Windows NT 4.0.}
+\twocolitem{{\bf wxSYS\_DEFAULT\_GUI\_FONT}}{Default font for user interface
+objects such as menus and dialog boxes.}
+\twocolitem{{\bf wxSYS\_ICONTITLE\_FONT}}{Font for the icon titles (Windows
+only, same as default GUI font on other platforms}
 \end{twocollist}
 
 \pythonnote{This static method is implemented in Python as a
